# opencode-pyrunner

./: .env.example  LICENSE  README.md  opencode_pyrunner.py  pyproject.toml  requirements-dev.txt  requirements.txt
doc/: opencode_runner_docs.html
tests/: __init__.py  test_model_config.py  test_opencode_runner.py
